`Added Google fonts, updated styles and layout for better readability and consistency`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
+        "Bacci",
+        "Cookathon",
         "Oldagram",
-        "Scrimba"
+        "PUBG",
+        "Scrimba",
+        "Twimba"
     ]
 }
